--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # WPGraphQL
-WPGRAPHQL_URL=https://2itdesignagency.gr/voltarentals/graphql
+WPGRAPHQL_URL=http://2itdesignagency.gr/voltarentals/graphql
 WP_BASE_URL=your-domain.example
 
 # Gatsby
-GATSBY_CONCURRENT_DOWNLOAD=200
+GATSBY_CONCURRENT_DOWNLOAD=1000
 
 # Add this if you SSL certificate is self-signed (for local development)
 #NODE_TLS_REJECT_UNAUTHORIZED=0
