--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eq-sass": "^2.0.0",
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
+    "gatsby-image-background-slider": "0.0.4",
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-notifications": "^0.0.2",
     "gatsby-plugin-react-helmet": "^4.3.0",
@@ -38,6 +39,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-slideshow-image": "^3.5.0",
     "sass": "^1.32.12"
   },
   "devDependencies": {
