--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "gatsby-transformer-sharp": "^2.12.0",
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-slideshow-image": "^3.5.0",
+    "reactstrap": "^8.10.0",
     "sass": "^1.32.12"
   },
   "devDependencies": {
