--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ GATSBY_CONCURRENT_DOWNLOAD=200
 
 # Add this if you SSL certificate is self-signed (for local development)
 #NODE_TLS_REJECT_UNAUTHORIZED=0
+
+concurrent: process.env.GATSBY_CONCURRENT_DOWNLOAD || 200, 
